# omnipkg

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  common.py  flatpak.json  gui.py  justfile  main.py  omni  pyproject.toml  requirements.txt  setup.py
.ropeproject/: autoimport.db
data/: omnipkg.desktop
data/pm-defs/: flatpak.json
pm-defs/: eopkg.json  pacman.json
src/omnipkg/: __init__.py  cache.py  cli.py  command.py  common.py  conf.py  dirs.py  gui.py  icon_cache.py  ini.py  install.py  mainwindow.py  mainwindow.ui  omnipkg.py  package.py  package_cache.py  package_manager.py  serdir.py  serobj.py
src/omnipkg/data/: categories.toml  config.toml  package-details-template.md
src/omnipkg/data/appfiles/: omnipkg.desktop  omnipkg.xpm
src/omnipkg/data/pm-defs/: brew.toml  eopkg.json  eopkg.toml  flatpak.json  flatpak.toml  pacman.json  pacman.toml  snap.json  snap.toml
src/omnipkg/eel-gui/: index.html
